--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,14 +1,5 @@
 @import "../../assets/styles/vars.scss";
 
-@keyframes headerAnimation {
-  0% {
-    transform: translateY(100px);
-  }
-  100% {
-    transform: translateY(0%);
-  }
-}
-
 @keyframes headerSubTextAnimation {
   0% {
     transform: translateY(20px);
@@ -43,36 +34,13 @@
 }
 
 header.main {
+  height: 6.25rem;
   padding: 2rem 0;
   transition: all 0.15s ease-in-out;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  @media (min-width: 60rem) {
-    height: 60vh;
-    min-height: 20rem;
-  }
-  @media (min-width: 85rem) {
-    height: 50vh;
-  }
-  .deco {
-    position: absolute;
-    top: 6.5rem;
-    left: 50%;
-    font-size: 65vw;
-    line-height: 0.75em;
-    font-weight: bold;
-    color: #ffffff;
-    height: 50vh;
-    @media (min-width: 60rem) {
-      position: fixed;
-      top: 5rem;
-    }
-    span:nth-child(1) {
-      transform: scaleX(-1);
-    }
-  }
   .top {
     z-index: 100;
     top: 0;
@@ -304,99 +272,6 @@ header.main {
               }
             }
           }
-        }
-      }
-    }
-  }
-  main {
-    flex: 0 0 100%;
-    @media (min-width: 60rem) {
-      padding-bottom: 0;
-    }
-    .container {
-      display: flex;
-    }
-    .text-box {
-      margin-bottom: 2rem;
-      max-width: 30rem;
-      margin-top: 3rem;
-      @media (min-width: 60rem) {
-        max-width: 35rem;
-        margin: 0;
-        transform: translateY(100px);
-        animation: headerAnimation 0.75s ease-in-out 0.5s 1 forwards;
-      }
-      @media (min-width: 85rem) {
-        max-width: 41rem;
-      }
-      h2 {
-        font-size: 2rem;
-        line-height: 1.2em;
-        margin-top: 3rem;
-        margin-bottom: 2rem;
-        @media (min-width: 60rem) {
-          margin-top: 10rem;
-          margin-bottom: 5rem;
-        }
-        span {
-          overflow: hidden;
-          display: inline-block;
-          vertical-align: bottom;
-          span {
-            transform: translateY(100px);
-            animation: headerAnimation 1s ease-in-out 0.25s 1 forwards;
-            @media (min-width: 60rem) {
-              animation: headerAnimation 1s ease-in-out 1.25s 1 forwards;
-            }
-          }
-        }
-        @media (min-width: 60rem) {
-          font-size: 2.25rem;
-          margin: 0;
-        }
-        @media (min-width: 85rem) {
-          font-size: 3rem;
-        }
-      }
-      .sub {
-        opacity: 0;
-        animation: headerSubTextAnimation 0.5s ease-in-out 1s 1 forwards;
-        @media (min-width: 60rem) {
-          animation: headerSubTextAnimation 0.75s ease-in-out 2s 1 forwards;
-        }
-      }
-      p {
-        font-size: 1.1rem;
-        line-height: 1.6em;
-        @media (min-width: 60rem) {
-          font-size: 1.2rem;
-        }
-      }
-      .btn {
-        font-size: 1.2rem;
-        text-decoration: none;
-        color: $color-primary;
-        display: inline-flex;
-        align-items: center;
-        transition: all 0.15s ease-in-out;
-        transform: translateX(-1.75rem);
-        &:hover {
-          transform: translateX(-0rem);
-          .icon {
-            transform: scale(1);
-          }
-        }
-        .icon {
-          margin-right: 0.5rem;
-          display: flex;
-          transform: scale(0);
-          transition: all 0.15s ease-in-out;
-          img {
-            width: 20px;
-          }
-        }
-        .text {
-          align-self: center;
         }
       }
     }
