--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -63,8 +63,10 @@ header.main {
       letter-spacing: 0.25em;
       text-transform: uppercase;
       transition: color 0.25s ease-in-out;
-      opacity: 0;
-      animation: topAnimation 1s ease-in-out 0s 1 forwards;
+      body.home & {
+        opacity: 0;
+        animation: topAnimation 1s ease-in-out 0s 1 forwards;
+      }
       body.open & {
         color: #fff;
       }
@@ -74,8 +76,10 @@ header.main {
       .lang {
         margin-right: 2rem;
         font-size: 1rem;
-        opacity: 0;
-        animation: topAnimation 1s ease-in-out 0s 1 forwards;
+        body.home & {
+          opacity: 0;
+          animation: topAnimation 1s ease-in-out 0s 1 forwards;
+        }
         a {
           text-decoration: none;
           color: #000;
@@ -84,13 +88,15 @@ header.main {
       }
     }
     .nav-icon {
-      opacity: 0;
-      animation: topAnimation 1s ease-in-out 0s 1 forwards;
       width: 30px;
       height: 25px;
       position: relative;
       transition: all 0.4s ease-in-out;
       cursor: pointer;
+      body.home & {
+        opacity: 0;
+        animation: topAnimation 1s ease-in-out 0s 1 forwards;
+      }
       span {
         display: block;
         position: absolute;
