--- a/src/components/introProjects/introProjects.scss
+++ b/src/components/introProjects/introProjects.scss
@@ -12,7 +12,7 @@
 header.sub {
   @media (min-width: 60rem) {
     padding-top: 5rem;
-    height: 60vh;
+    height: calc(60vh - 6.25rem);
     min-height: 20rem;
   }
   @media (min-width: 85rem) {
