--- a/src/components/introHome/introHome.scss
+++ b/src/components/introHome/introHome.scss
@@ -11,7 +11,7 @@
 
 header.sub {
   @media (min-width: 60rem) {
-    padding-top: 5rem;
+    //padding-top: 5rem;
     height: calc(60vh - 6.25rem);
     min-height: 20rem;
   }
