--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,4 +1,4 @@
-@import "../../assets/styles/vars.scss";
+@import '../../assets/styles/vars.scss';
 
 @keyframes headerSubTextAnimation {
   0% {
@@ -76,6 +76,7 @@ header.main {
       .lang {
         margin-right: 2rem;
         font-size: 1rem;
+        display: none;
         body.home & {
           opacity: 0;
           animation: topAnimation 1s ease-in-out 0s 1 forwards;
@@ -153,13 +154,16 @@ header.main {
       opacity: 0.35;
       position: absolute;
       transition: all 0.25s ease-in-out;
-      width: 50%;
+      width: 100%;
       height: 100%;
       top: 0;
       right: 0;
       background-image: url(https://images.unsplash.com/photo-1588076529545-979456f7c146?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&h=800&q=80);
       background-size: cover;
       background-position: center;
+      @media (min-width: 75rem) {
+        width: 50%;
+      }
       body.menu-bg-01 & {
         background-image: url(https://images.unsplash.com/photo-1531934788018-04c3cd417b80?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&h=800&q=80);
       }
@@ -202,7 +206,7 @@ header.main {
         .info {
           font-size: 1.2rem;
           opacity: 0;
-          margin-top: 4rem;
+          margin-top: 10rem;
           @media (min-width: 35rem) {
             margin-top: 0;
           }
@@ -231,6 +235,7 @@ header.main {
           .sm-links {
             display: flex;
             padding-left: 0;
+            display: none;
             li {
               list-style: none;
               &:first-child {
@@ -254,6 +259,7 @@ header.main {
           display: flex;
           flex-direction: column;
           margin-top: 8rem;
+          display: none;
           @media (min-width: 60rem) {
             margin-top: 0rem;
             margin-bottom: 2rem;
