--- a/src/components/teaser/teaser.scss
+++ b/src/components/teaser/teaser.scss
@@ -1,4 +1,4 @@
-@import "../../assets/styles/vars.scss";
+@import '../../assets/styles/vars.scss';
 
 @keyframes introAnimation {
   0% {
@@ -33,11 +33,11 @@
     min-height: 15rem;
     transform: translateY(100%);
     @media (min-width: 37rem) {
-      flex: 0 0 calc(100% / 2);
+      flex: 0 0 calc(100% / 1);
     }
     @media (min-width: 60rem) {
       transform: translateY(100%);
-      flex: 0 0 calc(100% / 4);
+      flex: 0 0 calc(100% / 3);
       height: 100%;
     }
     &:nth-child(1) {
@@ -89,7 +89,7 @@
         font-size: 1.5rem;
         line-height: 1.2em;
         margin: 1rem 0;
-        text-shadow: 0 1px 2px rgba(0,0,0,0.25);
+        text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
         @media (min-width: 35rem) {
           font-size: 1.5rem;
         }
@@ -103,7 +103,7 @@
         font-weight: bold;
         position: relative;
         &:before {
-          content: "";
+          content: '';
           width: 2rem;
           height: 0.15rem;
           background: $color-primary;
