--- a/_old/react-q1-20/src/components/teaser/teaser.scss
+++ b/_old/react-q1-20/src/components/teaser/teaser.scss
@@ -37,7 +37,7 @@
     }
     @media (min-width: 60rem) {
       transform: translateY(100%);
-      flex: 0 0 calc(100% / 3);
+      flex: 0 0 calc(100% / 4);
       height: 100%;
     }
     &:nth-child(1) {
@@ -136,6 +136,11 @@
       height: 100%;
       background-size: cover;
       background-position: center;
+    }
+    &.brutscher {
+      .image {
+        background-image: url(https://images.unsplash.com/photo-1558882423-bebedae70ea8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&w800&q=80);
+      }
     }
     &.fellliebe {
       .image {
